Add mark order seen method
